# cjs-ai-love-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PROJECT_PLAN_PYTHON_ENTERPRISE.md  RAG_KNOWLEDGE_BASE_PLAN.md  README.md  app.py  conftest.py  docker-compose.yml  mypy.ini  pyrightconfig.json  requirements.txt
agents/: README.md  __init__.py  memory.py  (+9 more)
backend/: .env.example  README.md  pyproject.toml
backend/ai_love_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/workflows/: chat_flow.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/endpoints/: __init__.py  chat.py  health.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/domain/: __init__.py  conversation.py
backend/app/infra/cache/: __init__.py  redis_client.py
backend/app/infra/db/: __init__.py  base.py  bootstrap.py  conversation_repository.py  models.py
backend/app/infra/llm/: __init__.py  client.py
backend/app/infra/storage/: __init__.py  minio_client.py
backend/app/infra/vector/: __init__.py  base.py  bootstrap.py  models.py  pgvector_client.py
backend/app/memory/: __init__.py  manager.py
backend/app/prompts/: __init__.py
backend/app/prompts/system/: companion_v1.md
backend/app/rag/: __init__.py  retriever.py
backend/app/safety/: __init__.py  guardrails.py
backend/app/schemas/: __init__.py  chat.py
backend/app/services/: chat_service.py
backend/app/tasks/: worker.py
backend/tests/: test_chat_api.py  test_health.py  test_storage_bootstrap.py
(+403 files in other folders)
